--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,6 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-    container_name: mayendb
+    container_name: Lara
     volumes:
       - ./postgres:/var/lib/postgresql/data
